# fasta_rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
src/: args.rs  dispatch.rs  errors.rs  lib.rs  main.rs
src/amplicon/: amplicon.rs  mod.rs
src/chunk/: chunk.rs  mod.rs
src/common/: errors.rs  macros.rs  mod.rs  reader.rs  utils.rs  writer.rs
src/compress/: compress.rs  mod.rs
src/extract/: extract.rs  mod.rs
src/fa2tab/: fa2tab.rs  mod.rs
src/filter/: filter.rs  mod.rs
src/grep/: grep.rs  mod.rs
src/head/: head.rs  mod.rs
src/homopolymers/: homopolymers.rs  mod.rs
src/reverse/: mod.rs  reverse.rs
src/sample/: mod.rs  sample.rs
src/shuffle/: mod.rs  shuffle.rs
src/sort/: mod.rs  sort.rs
src/split/: mod.rs  split.rs
src/stats/: mod.rs  stats.rs
