[package]
name = "fasta_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
bio = { version = "2.3.0" }
rayon = { version = "1.10.0" }
clap = { version = "4.5.39", features = ["derive"] }
log = { version = "0.4.27" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141" }
simple_logger = { version = "5.0.0" }
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.99" }
needletail = { version = "0.6.3", features = ["compression"] }
memchr = { version = "2.7.5" }
rand = { version = "0.9.2" }
rstest = { version = "0.26.1" }
regex = { version = "1.11.2" }
