[package]
name = "fasta_rs"
version = "0.0.1"
edition = "2024"
authors = ["oscar.aspelin@gmail.com"]
description = "Multi purpose fasta toolkit"
license = "Apache-2.0"
repository = "https://github.com/OscarAspelin95/fasta_rs"
keywords = ["bioinformatics", "fasta"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "fasta_rs"
path = "src/main.rs"

[dependencies]
bio = { version = "3.0.0" }
rayon = { version = "1.11.0" }
clap = { version = "4.5.54", features = ["derive"] }
log = { version = "0.4.29" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
simple_logger = { version = "5.1.0" }
thiserror = { version = "2.0.17" }
needletail = { version = "0.6.3", features = ["compression"] }
memchr = { version = "2.7.6" }
rand = { version = "0.9.2" }
rstest = { version = "0.26.1" }
regex = { version = "1.12.2" }
